--- a/src/scss/_partials/_globals.scss
+++ b/src/scss/_partials/_globals.scss
@@ -28,4 +28,10 @@ body {
     width: auto;
     min-width: 161px;
     margin-right: 15px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    &:hover,
+    &:focus {
+        border: 1px solid #ccc;
+    }
 }
