--- a/src/scss/_partials/_globals.scss
+++ b/src/scss/_partials/_globals.scss
@@ -6,13 +6,12 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 10px;
 }
 
 .row {
     &.two-cols {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 50px;
+        @extend %two-column;
     }
 }
 
@@ -28,6 +27,7 @@ body {
     width: auto;
     min-width: 161px;
     margin-right: 15px;
+    margin-bottom: 15px;
     font-weight: 700;
     letter-spacing: 1px;
     &:hover,
