--- a/src/scss/_partials/_placeholders.scss
+++ b/src/scss/_partials/_placeholders.scss
@@ -1,3 +1,12 @@
 %box-shadow {
     box-shadow: 1px 2px 6px 0px #ccc;
 }
+
+%two-column {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
+    @include respond-to('md') {
+        display: block;
+    }
+}
